# AiMarketTrade

./: .env.template  .gitignore  ANSWER_ALL_3_QUESTIONS.md  AUTO_EXECUTION_GUIDE.md  COMPLETION_REPORT.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_USAGE.md  DEBUG_REPORT_REAL_DATA_VERIFIED.md  DOCUMENTATION_INDEX.md  FLASK_DEPRECATION_AND_SOCKET_FIX.md  FLASK_FIXES_SUMMARY.md  HYBRID_APPROACH_DETAILED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  REFERENCE_MAP.md  check_all_industries.py  check_background_scan.py  check_latest_scan.py  check_scans.py  debug_config.py  debug_rsi.py  debug_test.py  fresh_flask_test.py  inspect_scan.py  pyproject.toml  quick_test.py  run_dashboard.py  run_scanner.py  scanner_status.py  show_deep_analysis.py  show_recommendations.py  test_auto_execution.py  test_dashboard_access.py  test_dashboard_startup.py  test_deep_analysis.py  test_full_pipeline.py  test_minimal_flask.py  test_option2_hybrid.py  test_pipeline.py  (+8 more)
deerflow-openbb/: PROJECT_SUMMARY.md  README.md  pyproject.toml  validate.py
deerflow-openbb/docs/: phase1-completion-report.md  phase1-summary.md
deerflow-openbb/src/: __init__.py  config.py  main.py  nodes.py  state.py
deerflow-openbb/tests/: test_config.py  test_integration.py
docs/: ARCHITECTURE_CURRENT_vs_PLANNED.md  DASHBOARD_INTEGRATION_SUMMARY.md  DELIVERY_SUMMARY.md  HOW_SIGNALS_ARE_DECIDED.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_OPTION_2_COMPLETE.md  PHASE_6_SUMMARY.md  QUICK_START_GUIDE.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_STRATEGY.md  REFACTORING_VISUAL_GUIDE.md  SCANNER_AND_REALDATA_FEATURES.md  TRADING_DASHBOARD_README.md  api-keys-setup.md  phase2-completion-report.md  phase2-summary.md  phase3-completion-report.md  phase4-completion-report.md  phase5-completion-report.md  phase5-testing-guide.md  phase6-completion-report.md  phase6-specification.md  phase7-specification.md
scan_results/: AI_scan.json  Energy_scan.json  Finance_scan.json  Healthcare_scan.json  Power_scan.json  Retail_scan.json  Tech_scan.json  Telecom_scan.json  hongkong_AI_scan.json  hongkong_ENERGY_scan.json  hongkong_FINANCE_scan.json  hongkong_HEALTHCARE_scan.json  hongkong_RETAIL_scan.json  hongkong_TECH_scan.json  hongkong_TELECOM_scan.json  (+8 more)
(+53 files in other folders)
